# urs_aerial

./: .gitignore  README.md
urs_ardrone_description/: CMakeLists.txt  package.xml
urs_ardrone_description/launch/: spawn_ardrone.launch
urs_ardrone_description/urdf/: ardrone.urdf.xacro  ardrone_base.urdf.xacro  multirotor_base.urdf.xacro
urs_launch/: CMakeLists.txt  package.xml
urs_launch/config/: bebop_tuning.perspective  bebop_tuning2.perspective
urs_launch/launch/: ardrone.launch  ardrone_ctl.launch  bebop.launch  bebop_ctl_joy.launch  gazebo_ardrone.launch  gazebo_slalom.launch  task2a.launch  task2b.launch  task3.launch  tello_ctl_joy.launch
urs_launch/startup/: session.yml  start.sh
urs_optitrack/: CMakeLists.txt  package.xml
urs_optitrack/launch/: optitrack.launch
urs_optitrack/scripts/: vrpn_transform.py
urs_solution/: CMakeLists.txt  package.xml
urs_solution/Task1/: pid_tpt.py  test_pid.py
urs_solution/Task2a/: height_ctl_tpt.py
urs_solution/Task2b/: attitude_ctl_tpt.py  test_height_attitude.py
urs_solution/Task3/: horizontal_ctl_tpt.py  test_horizontal.py
urs_solution/Task4/: horizontal_ctl_real_tpt.py
urs_worlds/: slalom.world
